Update sample test
Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

--- a/settings/internal/com.kms.katalon.core.mobile.android.properties
+++ b/settings/internal/com.kms.katalon.core.mobile.android.properties
@@ -1,1 +1,1 @@
-{"ANDROID_DRIVER":{"deviceId":""}}
+{"ANDROID_DRIVER":{"goog:chromeOptions":{"args":["--ignore-certificate-errors","--ignore-ssl-errors\u003dyes","--allow-insecure-localhost"]},"deviceId":"","acceptInsecureCerts":true}}
